# feup-iart-proj1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main
.github/workflows/: analysis.yml  build.yml  docs.yml  report1.yml  report2.yml
analysis/: dfs.sh  discard_dfs.sh
analysis/discard-dfs/: discard-dfs-math.csv  discard-dfs.mk
analysis/discard_dfs/: discard_dfs.sh
analysis/exploratory/: exploratory-math.csv  makefile
analysis/further-analysis/: astar-admissible-processed.csv  dfs-greedy-admissible-processed.csv  further-analysis.mk  process.cpp
analysis/large/: astar-admissible-processed.csv  astar-nonadmissible-processed.csv  bfs-processed.csv  dfs-greedy-admissible-processed.csv  greedy-admissible-processed.csv  makefile  process.cpp
analysis/multivars/: process.cpp
analysis/multivars/nColors/: astar-admissible-processed-2.csv  astar-admissible-processed-3.csv  astar-admissible-processed-4.csv  astar-admissible-processed-5.csv  astar-admissible-processed-6.csv  astar-admissible-processed-7.csv  astar-nonadmissible-processed-2.csv  astar-nonadmissible-processed-3.csv  astar-nonadmissible-processed-4.csv  astar-nonadmissible-processed-5.csv  astar-nonadmissible-processed-6.csv  astar-nonadmissible-processed-7.csv  bfs-processed-2.csv  bfs-processed-3.csv  bfs-processed-4.csv  bfs-processed-5.csv  bfs-processed-6.csv  bfs-processed-7.csv  dfs-greedy-admissible-processed-2.csv  dfs-greedy-admissible-processed-3.csv  dfs-greedy-admissible-processed-4.csv  dfs-greedy-admissible-processed-5.csv  dfs-greedy-admissible-processed-6.csv  dfs-greedy-admissible-processed-7.csv  greedy-admissible-processed-2.csv  greedy-admissible-processed-3.csv  greedy-admissible-processed-4.csv  greedy-admissible-processed-5.csv  greedy-admissible-processed-6.csv  greedy-admissible-processed-7.csv  makefile
analysis/multivars/tubeH/: astar-admissible-processed-2.csv  astar-admissible-processed-3.csv  astar-admissible-processed-4.csv  bfs-processed-2.csv  (+27 more)
doc/: Doxyfile
doc/report/: iart_proj1_checkpoint.tex  iart_proj1_final.synctex(busy)  iart_proj1_final.tex  report.bib
include/: CommandLineInterface.h  GUI.h  Gameboard.h  GameboardModel.h  GameboardView.h  MainMenuView.h  MenuView.h  Rectangle.h  ScoreboardModel.h  ScoreboardView.h  TerminalGUI.h  TerminalGUIColor.h  TerminalGUIDrawable.h  TerminalGUIFile.h  TerminalGUISprite.h
include/algorithm/: AstarSearch.h  BFS.h  BestFirstSearch.h  BreadthFirstSearch.h  DepthFirstGreedySearch.h  DepthFirstSearch.h  Dfs.h  GreedySearch.h  Heuristic.h  Heuristics.h  IterativeDeepeningSearch.h  Search.h  SearchStrategy.h
include/algorithms/: BFS.h  Dfs.h  GreedySearch.h
include/controller/: MenuController.h  RandomizeController.h
include/model/: GameboardModel.h  MainMenuModel.h  MenuModel.h  RandomizeModel.h  ScoreboardModel.h
include/view/: AboutView.h  GameboardView.h  MainMenuView.h  MenuView.h  RandomizeView.h  Rectangle.h  ScoreboardView.h
src/: CMakeLists.txt  CommandLineInterface.cpp  Gameboard.cpp  GameboardModel.cpp  GameboardView.cpp  MainMenuView.cpp  ScoreboardModel.cpp  ScoreboardView.cpp  TerminalGUI.cpp  TerminalGUIColor.cpp  TerminalGUIFile.cpp  TerminalGUISprite.cpp  main.cpp
src/algorithm/: AstarSearch.cpp  BFS.cpp  BestFirstSearch.cpp  BreadthFirstSearch.cpp  DepthFirstGreedySearch.cpp  DepthFirstSearch.cpp  Dfs.cpp  GreedySearch.cpp  Heuristic.cpp  Heuristics.cpp  IterativeDeepeningSearch.cpp  Search.cpp  SearchStrategy.cpp
src/algorithm/heuristics/: AdmissibleHeuristic.cpp  FiniteHorizonHeuristic.cpp  Heuristic.cpp  NonAdmissibleHeuristic.cpp
src/algorithms/: AstarSearch.cpp  BFS.cpp  BreadthFirstSearch.cpp  Dfs.cpp  GreedySearch.cpp  Heuristic.cpp  Heuristics.cpp  IterativeDeepeningSearch.cpp  Search.cpp
src/controller/: MenuController.cpp  RandomizeController.cpp
src/controller/state/: AboutState.cpp  ChooseBaseHeuristicState.cpp  ChooseFactorState.cpp  ChooseFiniteHorizonHeuristicState.cpp  ChooseHeuristicMachineState.cpp  ChooseHeuristicState.cpp  ChooseHeuristicStrategyState.cpp  ChooseHorizonState.cpp  ChooseMachineState.cpp  ChooseStrategyState.cpp  MainMenuState.cpp  PlayHumanState.cpp  PlayMachineState.cpp  RandomizeForHumanState.cpp  RandomizeForMachineState.cpp  State.cpp
src/model/: GameboardModel.cpp  MainMenuModel.cpp  MenuModel.cpp  RandomizeModel.cpp  ScoreboardModel.cpp
src/view/: AboutView.cpp  GameboardView.cpp  MainMenuView.cpp  MenuView.cpp  RandomizeView.cpp  Rectangle.cpp  ScoreboardView.cpp
src/view/gui/: TerminalGUI.cpp  TerminalGUIColor.cpp  TerminalGUIFile.cpp  TerminalGUISprite.cpp
(+26 files in other folders)
